test/tasty/pos/src-2/tastytest/TestDelayedFancyColours.scala
package tastytest

object TestDelayedFancyColours {
  def foo: DelayedFancyColours.Pretty = ???
}
